(PATCH) api/user | swagger changes
