# api/user/user_api.py
@@ -3,6 +3,8 @@ from flask import request
 from flask import jsonify
 
 from flask_jwt_extended import create_access_token
+from flask_jwt_extended import jwt_required
+from flask_jwt_extended import get_jwt_identity
 
 from .security import BcryptManager
 
@@ -20,11 +22,12 @@ user_api = Blueprint('user_api', __name__)
 hash_manager = BcryptManager()
 
 
-def hash_password(user: dict):
-    if 'password' not in user:
+def hash_password(user: dict, password_required=True):
+    if 'password' in user:
+        user['password'] = hash_manager.hash(user['password'])
+        return
+    elif password_required:
         raise BadCredentials("Password is invalid")
-
-    user['password'] = hash_manager.hash(user['password'])
 
 
 @user_api.route("/api/user", methods=['POST'])
@@ -37,6 +40,21 @@ def create_user(user):
     db_session.commit()
     
     return jsonify(user.id), 200
+
+@user_api.route("/api/user", methods=['PATCH'])
+@jwt_required()
+@inject_body
+def update_user(user):
+    current_user_email = get_jwt_identity()
+    remove_id(user)
+    hash_password(user, password_required=False)
+    db_session.query(User)\
+        .filter(User.email == current_user_email)\
+        .update(user)
+    db_session.commit()
+    return jsonify(msg="Successfully updated the user", user=db_session.query(User)\
+        .filter(User.email == current_user_email).first().as_dict())
+
 
 
 @user_api.route("/api/user/login", methods=['POST'])
